<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C4EAC4">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_list"
        android:layout_width="334dp"
        android:layout_height="177dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />


    <Button
        android:id="@+id/plan_btn"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#71AA31"
        android:text="Plan"
        app:layout_constraintEnd_toEndOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_list_view" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ZooSeeker"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="303dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:maxLines="1"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:queryHint="Search for Exhibits" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/plan_list_view"
        android:layout_width="338dp"
        android:layout_height="187dp"
        android:layout_marginTop="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_list"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/plan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="Planned Exhibits: "
        app:layout_constraintBottom_toTopOf="@+id/plan_list_view"
        app:layout_constraintEnd_toStartOf="@+id/plan_count"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_list"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/plan_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="8dp"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/plan_list_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_list"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/clear"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#71AA31"
        android:text="Clear List"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_list_view" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="295dp"
        android:layout_height="165dp"
        app:layout_constraintBottom_toTopOf="@+id/search_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sdzoologo" />


</androidx.constraintlayout.widget.ConstraintLayout>