...
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toEndOf="@+id/plannedExhibits"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/getDirBtn"
        android:layout_width="170dp"
        android:layout_height="47dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#71AA31"
        android:text="Get Directions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayOfExhibits"
        app:layout_constraintVertical_bias="0.534" />
...
